3.0 Final from 23th October. 2012

Changelog:

ADDED:
- A new block to select one content (many thanks to @QM-B)
- CSS lable for Tags added
- New option to display a print icon in the detailpage

UPDATED:
- jquery sliderkit updated to version 1.9.2

FIXED:
- Set the logged in User as default within the form
- slider-demos.css is much more smaller now



2.2 Final from 9th August. 2012

Changelog:

ADDED:
- Frontend: Actionicons within the detailpage to edit and delete a content
- Minor adjustments to ensure compatibility with Sprockets 2.0 for the future
- Japanese language files (unfinished)
- Added the categories into the form from sprockets (thank you to @Madfish)

FIXED:
- Fix slow page loading index page problem in file "cms/admin/index.php"
(http://community.impresscms.org/modules/newbb/viewtopic.php?viewmode=flat&type=&topic_id=5218&forum=9)
- Bugfix in breadcrumb
- Tag design for the front end page improved

DELETE:
- Links from the Frontend to the Modul Administration



2.1 Final from 29th Mar. 2012

Changelog:

CHANGED:
- Style from button deleted, otherwise you can get a issue with your theme

FIXED:
- Error in the module administration fixed



2.0 Final from 19th Mar. 2012

Changelog:

ADDED:
- Function for SEO-URL added (backend, front end and global search)
- Link to the comments from the module (module ACP)
- A note within the manual (How can I add PHP scripts)

DELETE:
- Regular date from the templates deleted
	(You can add if you like - see manual)



1.0 Final from 16th Feb. 2012

Changelog:

- Is more than one comment available, the login and register info will be display on bottom too
- Comment anker for request URL added
- Image resize for archived contents solved
- Module help integrated
- Problem with the theme changer fixed
- Function "read more" is visible only, if extended text available
- Resize function in the archived content fixed
- the breadcrumb link to the archive works now 
- Comment function for archived contents added